--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "cordova-plugin-mobiledevicesecurity",
   "version": "0.0.11",
   "description": "Cordova plugin to guard against some of Hacking / Tampering attacks. Also provides device information like state of Jailbrake / Root.",
-  "homepage": "https://github.com/shamitv/cordova-plugin-mobiledevicesecurity"
+  "homepage": "https://github.com/shamitv/cordova-plugin-mobiledevicesecurity",
   "cordova": {
     "id": "cordova-plugin-mobiledevicesecurity",
     "platforms": [
